--- a/style.css
+++ b/style.css
@@ -320,3 +320,19 @@ a:hover {
     background-color: #e6f0ff;
     text-decoration: underline;
 }
+
+/* REMOVE SECTION SEPARATOR IN HOME INTERFACE */
+#new-content hr {
+    display: none;
+    margin: 0;
+    padding: 0;
+    border: none;
+}
+
+#new-content > *:first-child {
+    margin-top: 0;
+}
+
+#new-content > *:last-child {
+    margin-bottom: 0;
+}
