--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ html, body {
 }
 
 .logo {
-    height: 50px;
+    height: 80px; /* Đã tăng kích thước logo lên */
     display: block;
     max-width: 100%;
     animation: fadeIn 0.8s ease-in-out;
